--- a/Copia_de_ML_Exercises.ipynb
+++ b/Copia_de_ML_Exercises.ipynb
@@ -82,22 +82,29 @@
         "id": "ORxeZwkVOMzt"
       },
       "source": [
-        "import numpy as np\n",
         "import pandas as pd\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.naive_bayes import GaussianNB\n",
-        "from sklearn.metrics import accuracy_score\n",
+        "import numpy as np\n",
+        "from tqdm import tqdm\n",
+        "import time\n",
         "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns"
+        "import seaborn as sns\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "from sklearn.preprocessing import MinMaxScaler\n",
+        "from sklearn.model_selection import cross_val_score, GridSearchCV, RandomizedSearchCV\n",
+        "from sklearn.naive_bayes import GaussianNB\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.svm import SVC"
       ],
-      "execution_count": 45,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "P0KTUGG5ONVy",
-        "outputId": "f70761e2-767f-4e73-cbe7-d30e15e40167",
+        "outputId": "6bb5fbb3-cee6-40a4-82be-9763abf68e09",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
@@ -108,7 +115,7 @@
         "dataset.dropna(inplace=True)\n",
         "dataset.head()"
       ],
-      "execution_count": 102,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -210,7 +217,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 102
+          "execution_count": 2
         }
       ]
     },
@@ -225,36 +232,8 @@
         "X_dummies = pd.get_dummies(X)\n",
         "Y = dataset[\"sex\"]"
       ],
-      "execution_count": 103,
+      "execution_count": 3,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "cWQ2Vtr-cB-A",
-        "outputId": "52cc3708-0192-4e51-f8f1-6febfcf0fba5",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "Y_train.shape"
-      ],
-      "execution_count": 125,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(249,)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 125
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -264,14 +243,23 @@
       "source": [
         "X_train, X_test, Y_train, Y_test = train_test_split(X_dummies, Y, test_size=0.3, random_state=43)"
       ],
-      "execution_count": 186,
+      "execution_count": 4,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nyhXXJu0Gtve"
+      },
+      "source": [
+        "Let´s first use **Naive Bayes** algorithm to solve the penguins classification exercise."
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "4S3udEdBTv4e",
-        "outputId": "306f272f-a65b-4ee0-e33c-6052b37e7830",
+        "outputId": "14e926b2-7130-4c8e-809c-ede505f3abc4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -280,7 +268,7 @@
         "model = GaussianNB()\n",
         "model.fit(X_train, Y_train)"
       ],
-      "execution_count": 187,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -292,7 +280,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 187
+          "execution_count": 5
         }
       ]
     },
@@ -300,55 +288,24 @@
       "cell_type": "code",
       "metadata": {
         "id": "fJsJP6CbZh-p",
-        "outputId": "8e6fc6ef-5131-459d-a71b-894ad352c102",
+        "outputId": "6bc8900a-b4b7-41ef-ef5a-8f2028d66d60",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "model.score(X_train, Y_train)"
+        "print(\"Train:\", model.score(X_train, Y_train))\n",
+        "print(\"Test:\", model.score(X_test, Y_test))"
       ],
-      "execution_count": 188,
+      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.7682403433476395"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 188
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "nBWOa2JzZiUk",
-        "outputId": "68fb2c22-897e-4f74-855a-de88d5663ab2",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "model.score(X_test, Y_test)"
-      ],
-      "execution_count": 189,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.75"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 189
+          "output_type": "stream",
+          "text": [
+            "Train: 0.7682403433476395\n",
+            "Test: 0.75\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -356,59 +313,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "ZlAzISyZTv7m",
-        "outputId": "c48d2ce7-fb65-4434-ba48-989f6aefdaac",
+        "outputId": "d4a5106b-176c-4d38-a0a9-5767d2171a12",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
         "Y_pred = model.predict(X_test)\n",
-        "Y_pred"
-      ],
-      "execution_count": 190,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array(['Female', 'Male', 'Female', 'Male', 'Female', 'Male', 'Female',\n",
-              "       'Female', 'Male', 'Female', 'Male', 'Male', 'Female', 'Male',\n",
-              "       'Female', 'Female', 'Female', 'Male', 'Female', 'Female', 'Male',\n",
-              "       'Female', 'Male', 'Male', 'Female', 'Male', 'Female', 'Male',\n",
-              "       'Female', 'Female', 'Female', 'Male', 'Female', 'Male', 'Male',\n",
-              "       'Female', 'Female', 'Male', 'Male', 'Male', 'Female', 'Female',\n",
-              "       'Male', 'Female', 'Male', 'Female', 'Male', 'Male', 'Male',\n",
-              "       'Female', 'Male', 'Female', 'Male', 'Male', 'Female', 'Female',\n",
-              "       'Male', 'Female', 'Female', 'Female', 'Male', 'Male', 'Male',\n",
-              "       'Female', 'Male', 'Female', 'Female', 'Female', 'Female', 'Male',\n",
-              "       'Male', 'Female', 'Female', 'Male', 'Female', 'Female', 'Female',\n",
-              "       'Female', 'Female', 'Male', 'Female', 'Male', 'Female', 'Male',\n",
-              "       'Male', 'Female', 'Female', 'Male', 'Female', 'Male', 'Male',\n",
-              "       'Male', 'Female', 'Male', 'Female', 'Female', 'Female', 'Male',\n",
-              "       'Female', 'Female'], dtype='<U6')"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 190
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "NymNc0WXVlte",
-        "outputId": "838e392a-c31b-47e6-c4bd-5adeb52d8efd",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
         "accuracy = accuracy_score(Y_test, Y_pred)\n",
         "accuracy"
       ],
-      "execution_count": 191,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -420,14 +335,87 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 191
+          "execution_count": 7
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oMtHWhU6HevD"
+      },
+      "source": [
+        "Now, let´s see how it works with **Support Vector Machine** algorithm."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "XfwfZhTfVqF5"
+      },
+      "source": [
+        "from sklearn import svm\n",
+        "clf = svm.SVC(kernel='linear') # Linear Kernel\n",
+        "clf.fit(X_train, Y_train)\n",
+        "y_pred = clf.predict(X_test)"
+      ],
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YCRQdpiwY-yt",
+        "outputId": "dc309db9-7ca3-4b0f-b2e7-9ec68d4a3b32",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from sklearn import metrics\n",
+        "print(\"Accuracy:\",metrics.accuracy_score(Y_test, Y_pred))"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Accuracy: 0.75\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PZjbYxPSPr_G",
+        "outputId": "08ad5a09-66b1-47fe-efdc-c16b6ee45944",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "clf = svm.SVC() # Radial basis function Kernel\n",
+        "clf.fit(X_train, Y_train)\n",
+        "y_pred = clf.predict(X_test)\n",
+        "print(\"Accuracy:\",metrics.accuracy_score(Y_test, Y_pred))"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Accuracy: 0.75\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "snLHjhuhumpo"
       },
       "source": [
         ""
@@ -438,7 +426,266 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YCRQdpiwY-yt"
+        "id": "3yNdJWjvumwP"
+      },
+      "source": [
+        "kernels = ['Polynomial', 'RBF', 'Sigmoid','Linear']#A function which returns the corresponding SVC model\n",
+        "def getClassifier(ktype):\n",
+        "    if ktype == 0:\n",
+        "        # Polynomial kernal\n",
+        "        return SVC(kernel='poly', degree=8, gamma=\"auto\")\n",
+        "    elif ktype == 1:\n",
+        "        # Radial Basis Function kernal\n",
+        "        return SVC(kernel='rbf', gamma=\"auto\")\n",
+        "    elif ktype == 2:\n",
+        "        # Sigmoid kernal\n",
+        "        return SVC(kernel='sigmoid', gamma=\"auto\")\n",
+        "    elif ktype == 3:\n",
+        "        # Linear kernal\n",
+        "        return SVC(kernel='linear', gamma=\"auto\")"
+      ],
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5UiEyn3_umzZ",
+        "outputId": "68891d2e-046f-4127-aed4-30845990a4cd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from sklearn.metrics import classification_report, confusion_matrix\n",
+        "for i in range(4):\n",
+        "    # Separate data into test and training sets\n",
+        "    X_train, X_test, Y_train, Y_test = train_test_split(X_dummies, Y, test_size=0.3, random_state=43)# Train a SVC model using different kernel\n",
+        "    svclassifier = getClassifier(i) \n",
+        "    svclassifier.fit(X_train, Y_train)# Make prediction\n",
+        "    Y_pred = svclassifier.predict(X_test)# Evaluate our model\n",
+        "    print(\"Evaluation:\", kernels[i], \"kernel\")\n",
+        "    print(classification_report(Y_test,Y_pred))"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Evaluation: Polynomial kernel\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "      Female       0.00      0.00      0.00        50\n",
+            "        Male       0.50      1.00      0.67        50\n",
+            "\n",
+            "    accuracy                           0.50       100\n",
+            "   macro avg       0.25      0.50      0.33       100\n",
+            "weighted avg       0.25      0.50      0.33       100\n",
+            "\n",
+            "Evaluation: RBF kernel\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "      Female       0.87      0.54      0.67        50\n",
+            "        Male       0.67      0.92      0.77        50\n",
+            "\n",
+            "    accuracy                           0.73       100\n",
+            "   macro avg       0.77      0.73      0.72       100\n",
+            "weighted avg       0.77      0.73      0.72       100\n",
+            "\n",
+            "Evaluation: Sigmoid kernel\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "      Female       0.00      0.00      0.00        50\n",
+            "        Male       0.50      1.00      0.67        50\n",
+            "\n",
+            "    accuracy                           0.50       100\n",
+            "   macro avg       0.25      0.50      0.33       100\n",
+            "weighted avg       0.25      0.50      0.33       100\n",
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/metrics/_classification.py:1272: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, msg_start, len(result))\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/metrics/_classification.py:1272: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, msg_start, len(result))\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Evaluation: Linear kernel\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "      Female       0.93      0.80      0.86        50\n",
+            "        Male       0.82      0.94      0.88        50\n",
+            "\n",
+            "    accuracy                           0.87       100\n",
+            "   macro avg       0.88      0.87      0.87       100\n",
+            "weighted avg       0.88      0.87      0.87       100\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MpjBS82-wr2w"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kpHQ7wIkwr5_"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_e7zN8kIT3NI"
+      },
+      "source": [
+        "from sklearn.linear_model import LogisticRegression"
+      ],
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "v_MI2_XoT3VW",
+        "outputId": "7cd3cce2-f7ca-46c2-f350-9b4f8437f3a1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model = LogisticRegression(max_iter=150)\n",
+        "model.fit(X_train, Y_train)"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_logistic.py:940: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+            "\n",
+            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+            "Please also refer to the documentation for alternative solver options:\n",
+            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+            "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+              "                   intercept_scaling=1, l1_ratio=None, max_iter=150,\n",
+              "                   multi_class='auto', n_jobs=None, penalty='l2',\n",
+              "                   random_state=None, solver='lbfgs', tol=0.0001, verbose=0,\n",
+              "                   warm_start=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "o6rpdZFhUAmP",
+        "outputId": "097ec251-d901-4a28-f617-c5d602a6c050",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model.score(X_train, Y_train)"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.8283261802575107"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 43
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XlPiY_69UQwB",
+        "outputId": "fd93ad00-f4ab-46bb-e8f2-c2f7cf06d558",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model.score(X_test, Y_test)"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.86"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TTsRO2uwUpLf"
+      },
+      "source": [
+        "Y_pred = model.predict(X_test)\n",
+        "accuracy = accuracy_score(Y_test, Y_pred)\n",
+        "accuracy"
+      ],
+      "execution_count": 77,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cZsOP0Y_txKD"
       },
       "source": [
         ""
