--- a/Copia_de_ML_Exercises.ipynb
+++ b/Copia_de_ML_Exercises.ipynb
@@ -82,19 +82,12 @@
         "id": "ORxeZwkVOMzt"
       },
       "source": [
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "from tqdm import tqdm\n",
-        "import time\n",
-        "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.metrics import accuracy_score\n",
-        "from sklearn.preprocessing import MinMaxScaler\n",
-        "from sklearn.model_selection import cross_val_score, GridSearchCV, RandomizedSearchCV\n",
+        "from sklearn.metrics import classification_report, confusion_matrix\n",
         "from sklearn.naive_bayes import GaussianNB\n",
         "from sklearn.linear_model import LogisticRegression\n",
-        "from sklearn.tree import DecisionTreeClassifier\n",
         "from sklearn.svm import SVC"
       ],
       "execution_count": 1,
@@ -104,7 +97,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "P0KTUGG5ONVy",
-        "outputId": "6bb5fbb3-cee6-40a4-82be-9763abf68e09",
+        "outputId": "be4f75f1-e2a4-428b-d713-317af2655ec6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
@@ -252,14 +245,14 @@
         "id": "nyhXXJu0Gtve"
       },
       "source": [
-        "Let´s first use **Naive Bayes** algorithm to solve the penguins classification exercise."
+        "To solve the penguins classification exercise we can try different algorithms and observe the behaviour of the model with each of them. Let´s first use **Naive Bayes** algorithm."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "4S3udEdBTv4e",
-        "outputId": "14e926b2-7130-4c8e-809c-ede505f3abc4",
+        "outputId": "76342789-14b7-447c-f44a-3f88f399f4a4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -288,7 +281,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "fJsJP6CbZh-p",
-        "outputId": "6bc8900a-b4b7-41ef-ef5a-8f2028d66d60",
+        "outputId": "eb2958bf-d222-4a78-8a3d-342efae55a96",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -313,7 +306,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "ZlAzISyZTv7m",
-        "outputId": "d4a5106b-176c-4d38-a0a9-5767d2171a12",
+        "outputId": "4c233a22-8ab8-4839-a252-b11d807e754d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -342,45 +335,79 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "oMtHWhU6HevD"
+        "id": "qoM3hMoU7xCe"
       },
       "source": [
-        "Now, let´s see how it works with **Support Vector Machine** algorithm."
+        "The result are not bad but we can try to improve them. Let´s try to do it on the **Logistic Regression** example."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XfwfZhTfVqF5"
-      },
-      "source": [
-        "from sklearn import svm\n",
-        "clf = svm.SVC(kernel='linear') # Linear Kernel\n",
-        "clf.fit(X_train, Y_train)\n",
-        "y_pred = clf.predict(X_test)"
-      ],
-      "execution_count": 8,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "YCRQdpiwY-yt",
-        "outputId": "dc309db9-7ca3-4b0f-b2e7-9ec68d4a3b32",
+        "id": "yh1zChwo7v8w",
+        "outputId": "12700529-8a97-459e-f3c5-1ad7527a6d7c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "from sklearn import metrics\n",
-        "print(\"Accuracy:\",metrics.accuracy_score(Y_test, Y_pred))"
+        "model = LogisticRegression(max_iter=150)\n",
+        "model.fit(X_train, Y_train)"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_logistic.py:940: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+            "\n",
+            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+            "Please also refer to the documentation for alternative solver options:\n",
+            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+            "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+              "                   intercept_scaling=1, l1_ratio=None, max_iter=150,\n",
+              "                   multi_class='auto', n_jobs=None, penalty='l2',\n",
+              "                   random_state=None, solver='lbfgs', tol=0.0001, verbose=0,\n",
+              "                   warm_start=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0uSjk3N_7wIF",
+        "outputId": "6f565551-760a-4943-baae-7b3b546db5df",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(\"Train:\", model.score(X_train, Y_train))\n",
+        "print(\"Test:\", model.score(X_test, Y_test))"
       ],
       "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Accuracy: 0.75\n"
+            "Train: 0.8283261802575107\n",
+            "Test: 0.86\n"
           ],
           "name": "stdout"
         }
@@ -389,39 +416,41 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PZjbYxPSPr_G",
-        "outputId": "08ad5a09-66b1-47fe-efdc-c16b6ee45944",
+        "id": "HtRia_Zv7wQK",
+        "outputId": "99bd0f82-f538-4530-fdef-515e9f755324",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "clf = svm.SVC() # Radial basis function Kernel\n",
-        "clf.fit(X_train, Y_train)\n",
-        "y_pred = clf.predict(X_test)\n",
-        "print(\"Accuracy:\",metrics.accuracy_score(Y_test, Y_pred))"
+        "Y_pred = model.predict(X_test)\n",
+        "accuracy = accuracy_score(Y_test, Y_pred)\n",
+        "accuracy"
       ],
       "execution_count": 10,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "Accuracy: 0.75\n"
-          ],
-          "name": "stdout"
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.86"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
         }
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "snLHjhuhumpo"
+        "id": "oMtHWhU6HevD"
       },
       "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+        "Now, let´s see how it works with **Support Vector Machine** algorithm."
+      ]
     },
     {
       "cell_type": "code",
@@ -451,13 +480,12 @@
       "cell_type": "code",
       "metadata": {
         "id": "5UiEyn3_umzZ",
-        "outputId": "68891d2e-046f-4127-aed4-30845990a4cd",
+        "outputId": "29c40721-a991-4774-9f45-1d836530ab54",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "from sklearn.metrics import classification_report, confusion_matrix\n",
         "for i in range(4):\n",
         "    # Separate data into test and training sets\n",
         "    X_train, X_test, Y_train, Y_test = train_test_split(X_dummies, Y, test_size=0.3, random_state=43)# Train a SVC model using different kernel\n",
@@ -534,6 +562,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "F5S_pFdA9cNv"
+      },
+      "source": [
+        "So, we can observe that each algorithm performs differently on the same dataset which permits us to choose the optimal one.\n",
+        "\n",
+        "Finding the correct algorithm is as important as tuning parameters as they control the overall behaviour of a ML model and are crucial for solving the ML problem.\n",
+        "\n",
+        "From the obtained results, we can see that the model behaves better with the SVM algorithm. We trained it with several different kernels and the Linear kernel seems to be the most significant out of four. "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "MpjBS82-wr2w"
@@ -548,144 +589,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "kpHQ7wIkwr5_"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "_e7zN8kIT3NI"
-      },
-      "source": [
-        "from sklearn.linear_model import LogisticRegression"
-      ],
-      "execution_count": 28,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "v_MI2_XoT3VW",
-        "outputId": "7cd3cce2-f7ca-46c2-f350-9b4f8437f3a1",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "model = LogisticRegression(max_iter=150)\n",
-        "model.fit(X_train, Y_train)"
-      ],
-      "execution_count": 42,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_logistic.py:940: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-            "\n",
-            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-            "Please also refer to the documentation for alternative solver options:\n",
-            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-            "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-              "                   intercept_scaling=1, l1_ratio=None, max_iter=150,\n",
-              "                   multi_class='auto', n_jobs=None, penalty='l2',\n",
-              "                   random_state=None, solver='lbfgs', tol=0.0001, verbose=0,\n",
-              "                   warm_start=False)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 42
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "o6rpdZFhUAmP",
-        "outputId": "097ec251-d901-4a28-f617-c5d602a6c050",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "model.score(X_train, Y_train)"
-      ],
-      "execution_count": 43,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.8283261802575107"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 43
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "XlPiY_69UQwB",
-        "outputId": "fd93ad00-f4ab-46bb-e8f2-c2f7cf06d558",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "model.score(X_test, Y_test)"
-      ],
-      "execution_count": 44,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.86"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 44
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "TTsRO2uwUpLf"
-      },
-      "source": [
-        "Y_pred = model.predict(X_test)\n",
-        "accuracy = accuracy_score(Y_test, Y_pred)\n",
-        "accuracy"
-      ],
-      "execution_count": 77,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "cZsOP0Y_txKD"
       },
       "source": [
         ""
