--- a/Copia_de_ML_Exercises.ipynb
+++ b/Copia_de_ML_Exercises.ipynb
@@ -48,7 +48,7 @@
         "id": "n0EIKu82LMdN"
       },
       "source": [
-        "### This notebook is completed by **Sergio Roldan**, **Anna Skorobogatova** and **Pablo Soriano** who form **DatAttack team**."
+        "This notebook is done in collaboration between **Sergio Roldan**, **Anna Skorobogatova** and **Pablo Soriano** who form **DatAttack team**."
       ]
     },
     {
